<resources>
    <string name="app_name">趣停车</string>
    <string name="saoyisao">二维码放入框内自动扫描</string>
    <string name="hint_info">1.先支付10元预约车位\n\n2.15分钟内免费，15分钟后开始计费\n\n3超30分钟未到自动取消</string>
    <string-array name="province_item">
        <item>北京</item>
        <item>天津</item>
        <item>河北</item>
        <item>山西</item>
        <item>内蒙古</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>上海</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>安徽</item>
        <item>福建</item>
        <item>江西</item>
        <item>山东</item>
        <item>河南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>广东</item>
        <item>广西</item>
        <item>海南</item>
        <item>重庆</item>
        <item>四川</item>
        <item>贵州</item>
        <item>云南</item>
        <item>西藏</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>青海</item>
        <item>宁夏</item>
        <item>新疆</item>
        <item>香港</item>
        <item>澳门</item>
        <item>台湾</item>
    </string-array>
    <string-array name="beijin_province_item">
        <item>北京</item>
    </string-array>
    <string-array name="tianjin_province_item">
        <item>天津</item>
    </string-array>
    <string-array name="heibei_province_item">
        <item>石家庄</item>
        <item>唐山</item>
        <item>秦皇岛</item>
        <item>邯郸</item>
        <item>邢台</item>
        <item>保定</item>
        <item>张家口</item>
        <item>承德</item>
        <item>沧州</item>
        <item>廊坊</item>
        <item>衡水</item>
    </string-array>
    <string-array name="shanxi1_province_item">
        <item>太原</item>
        <item>大同</item>
        <item>阳泉</item>
        <item>长治</item>
        <item>晋城</item>
        <item>朔州</item>
        <item>晋中</item>
        <item>运城</item>
        <item>忻州</item>
        <item>临汾</item>
        <item>吕梁</item>
    </string-array>
    <string-array name="neimenggu_province_item">
        <item>呼和浩特</item>
        <item>包头</item>
        <item>乌海</item>
        <item>赤峰</item>
        <item>通辽</item>
        <item>鄂尔多斯</item>
        <item>呼伦贝尔</item>
        <item>巴彦淖尔</item>
        <item>乌兰察布</item>
        <item>兴安盟</item>
        <item>锡林郭勒盟</item>
        <item>阿拉善盟</item>
    </string-array>
    <string-array name="liaoning_province_item">
        <item>沈阳</item>
        <item>大连</item>
        <item>鞍山</item>
        <item>抚顺</item>
        <item>本溪</item>
        <item>丹东</item>
        <item>锦州</item>
        <item>营口</item>
        <item>阜新</item>
        <item>辽阳</item>
        <item>盘锦</item>
        <item>铁岭</item>
        <item>朝阳</item>
        <item>葫芦岛</item>
    </string-array>
    <string-array name="jilin_province_item">
        <item>长春</item>
        <item>吉林</item>
        <item>四平</item>
        <item>辽源</item>
        <item>通化</item>
        <item>白山</item>
        <item>松原</item>
        <item>白城</item>
        <item>延边</item>
    </string-array>
    <string-array name="heilongjiang_province_item">
        <item>哈尔滨</item>
        <item>齐齐哈尔</item>
        <item>鸡西</item>
        <item>鹤岗</item>
        <item>双鸭山</item>
        <item>大庆</item>
        <item>伊春</item>
        <item>佳木斯</item>
        <item>七台河</item>
        <item>牡丹江</item>
        <item>黑河</item>
        <item>绥化</item>
        <item>大兴安岭</item>
    </string-array>
    <string-array name="shanghai_province_item">
        <item>上海</item>
    </string-array>
    <string-array name="jiangsu_province_item">
        <item>南京</item>
        <item>无锡</item>
        <item>徐州</item>
        <item>常州</item>
        <item>苏州</item>
        <item>南通</item>
        <item>连云港</item>
        <item>淮安</item>
        <item>盐城</item>
        <item>扬州</item>
        <item>镇江</item>
        <item>泰州</item>
        <item>宿迁</item>
    </string-array>
    <string-array name="zhejiang_province_item">
        <item>杭州</item>
        <item>宁波</item>
        <item>温州</item>
        <item>嘉兴</item>
        <item>湖州</item>
        <item>绍兴</item>
        <item>金华</item>
        <item>衢州</item>
        <item>舟山</item>
        <item>台州</item>
        <item>丽水</item>
    </string-array>
    <string-array name="anhui_province_item">
        <item>合肥</item>
        <item>芜湖</item>
        <item>蚌埠</item>
        <item>淮南</item>
        <item>马鞍山</item>
        <item>淮北</item>
        <item>铜陵</item>
        <item>安庆</item>
        <item>黄山</item>
        <item>滁州</item>
        <item>阜阳</item>
        <item>宿州</item>
        <item>巢湖</item>
        <item>六安</item>
        <item>亳州</item>
        <item>池州</item>
        <item>宣城</item>
    </string-array>
    <string-array name="fujian_province_item">
        <item>福州</item>
        <item>厦门</item>
        <item>莆田</item>
        <item>三明</item>
        <item>泉州</item>
        <item>漳州</item>
        <item>南平</item>
        <item>龙岩</item>
        <item>宁德</item>
    </string-array>
    <string-array name="jiangxi_province_item">
        <item>南昌</item>
        <item>景德镇</item>
        <item>萍乡</item>
        <item>九江</item>
        <item>新余</item>
        <item>鹰潭</item>
        <item>赣州</item>
        <item>吉安</item>
        <item>宜春</item>
        <item>抚州</item>
        <item>上饶</item>
    </string-array>
    <string-array name="shandong_province_item">
        <item>济南</item>
        <item>青岛</item>
        <item>淄博</item>
        <item>枣庄</item>
        <item>东营</item>
        <item>烟台</item>
        <item>潍坊</item>
        <item>济宁</item>
        <item>泰安</item>
        <item>威海</item>
        <item>日照</item>
        <item>莱芜</item>
        <item>临沂</item>
        <item>德州</item>
        <item>聊城</item>
        <item>滨州</item>
        <item>荷泽</item>
    </string-array>
    <string-array name="henan_province_item">
        <item>郑州</item>
        <item>开封</item>
        <item>洛阳</item>
        <item>平顶山</item>
        <item>安阳</item>
        <item>鹤壁</item>
        <item>新乡</item>
        <item>焦作</item>
        <item>濮阳</item>
        <item>许昌</item>
        <item>漯河</item>
        <item>三门峡</item>
        <item>南阳</item>
        <item>商丘</item>
        <item>信阳</item>
        <item>周口</item>
        <item>驻马店</item>
    </string-array>
    <string-array name="hubei_province_item">
        <item>武汉</item>
        <item>黄石</item>
        <item>十堰</item>
        <item>宜昌</item>
        <item>襄樊</item>
        <item>鄂州</item>
        <item>荆门</item>
        <item>孝感</item>
        <item>荆州</item>
        <item>黄冈</item>
        <item>咸宁</item>
        <item>随州</item>
        <item>恩施</item>
        <item>神农架</item>
    </string-array>
    <string-array name="hunan_province_item">
        <item>长沙</item>
        <item>株洲</item>
        <item>湘潭</item>
        <item>衡阳</item>
        <item>邵阳</item>
        <item>岳阳</item>
        <item>常德</item>
        <item>张家界</item>
        <item>益阳</item>
        <item>郴州</item>
        <item>永州</item>
        <item>怀化</item>
        <item>娄底</item>
        <item>湘西</item>
    </string-array>
    <string-array name="guangdong_province_item">
        <item>广州</item>
        <item>韶关</item>
        <item>深圳</item>
        <item>珠海</item>
        <item>汕头</item>
        <item>佛山</item>
        <item>江门</item>
        <item>湛江</item>
        <item>茂名</item>
        <item>肇庆</item>
        <item>惠州</item>
        <item>梅州</item>
        <item>汕尾</item>
        <item>河源</item>
        <item>阳江</item>
        <item>清远</item>
        <item>东莞</item>
        <item>中山</item>
        <item>潮州</item>
        <item>揭阳</item>
        <item>云浮</item>
    </string-array>
    <string-array name="guangxi_province_item">
        <item>南宁</item>
        <item>柳州</item>
        <item>桂林</item>
        <item>梧州</item>
        <item>北海</item>
        <item>防城港</item>
        <item></item>
        <item>钦州</item>
        <item>贵港</item>
        <item>玉林</item>
        <item>百色</item>
        <item>贺州</item>
        <item>河池</item>
        <item>来宾</item>
        <item>崇左</item>
    </string-array>
    <string-array name="hainan_province_item">
        <item>海口</item>
        <item>三亚</item>
    </string-array>
    <string-array name="chongqing_province_item">
        <item>重庆</item>
    </string-array>
    <string-array name="sichuan_province_item">
        <item>成都</item>
        <item>自贡</item>
        <item>攀枝花</item>
        <item>泸州</item>
        <item>德阳</item>
        <item>绵阳</item>
        <item>广元</item>
        <item>遂宁</item>
        <item>内江</item>
        <item>乐山</item>
        <item>南充</item>
        <item>眉山</item>
        <item>宜宾</item>
        <item>广安</item>
        <item>达州</item>
        <item>雅安</item>
        <item>巴中</item>
        <item>资阳</item>
        <item>阿坝</item>
        <item>甘孜</item>
        <item>凉山</item>
    </string-array>
    <string-array name="guizhou_province_item">
        <item>贵阳</item>
        <item>六盘水</item>
        <item>遵义</item>
        <item>安顺</item>
        <item>铜仁</item>
        <item>黔西南</item>
        <item>毕节</item>
        <item>黔东南</item>
        <item>黔南</item>
    </string-array>
    <string-array name="yunnan_province_item">
        <item>昆明</item>
        <item>曲靖</item>
        <item>玉溪</item>
        <item>保山</item>
        <item>昭通</item>
        <item>丽江</item>
        <item>思茅</item>
        <item>临沧</item>
        <item>楚雄</item>
        <item>红河</item>
        <item>文山</item>
        <item>西双版纳</item>
        <item>大理</item>
        <item>德宏</item>
        <item>怒江</item>
        <item>迪庆</item>
    </string-array>
    <string-array name="xizang_province_item">
        <item>拉萨</item>
        <item>昌都</item>
        <item>山南</item>
        <item>日喀则</item>
        <item>那曲</item>
        <item>阿里</item>
        <item>林芝</item>
    </string-array>
    <string-array name="shanxi2_province_item">
        <item>西安</item>
        <item>铜川</item>
        <item>宝鸡</item>
        <item>咸阳</item>
        <item>渭南</item>
        <item>延安</item>
        <item>汉中</item>
        <item>榆林</item>
        <item>安康</item>
        <item>商洛</item>
    </string-array>
    <string name="suggest_wel">欢迎您提出宝贵的意见和建议,您留下的每个字都将用来改善我们的产品</string>
    <string name="suggest_write">请输入您的反馈意见(字数200字以内)</string>
    <string name="your_mainbox">您的邮箱(可选)</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="info">如果你有什么好的建议,欢迎与我们联系.\n欢迎拨打我们的客服电话:0579-82351234</string>
    <string name="enter_verification_code">请输入验证码</string>
    <string name="enter_password">请输入密码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="next_type">下一步</string>
    <string name="account_balance">账户余额</string>
    <string name="integral_">我的积分</string>
    <string name="parking_vouchers">停车券</string>
    <string name="washing_vouchers">洗车券</string>
    <string name="enter_old_pwd">请输入原密码</string>
    <string name="enter_new_pwd">请输入新密码</string>
    <string name="makesure_new_pwd">请确认新密码</string>
    <string name="reg_notice">为了您的账号安全,将发送短信验证码到您的手机</string>
    <string name="makesure_modification">确认修改</string>
    <string name="fifty">50元</string>
    <string name="one_hundred">100元</string>
    <string name="two_hundred">200元</string>
    <string name="eight_hundred">800元</string>
    <string name="enter_money">请输入充值金额</string>
    <string name="makesure_recharge">确认充值</string>
    <string name="wechat_paymode">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="cancle">取消</string>
    <string name="edittext_limit">"1234567890`-=~@!#$%^*()_+[]{}\|;:'",./?>qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"</string>
</resources>