<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggest_wel"
        android:layout_margin="5dp"
        android:textColor="@color/app_black"
        />
    <EditText
        android:id="@+id/enter_suggest_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minHeight="90dp"
        android:gravity="top"
        android:textSize="@dimen/text_size_16"
        android:hint="@string/suggest_write"
        android:maxLength="200"
        />
    <EditText
        android:id="@+id/enter_mainbox_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_margin="5dp"
        android:hint="@string/your_mainbox"
        android:textSize="@dimen/text_size_16"
        />
    <Button
        android:id="@+id/submit_feedback_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_feedback"
        android:layout_margin="5dp"
        android:background="@color/app_green"
        android:minHeight="40dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/app_black"
        android:text="@string/info"
        />

</LinearLayout>