<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <include layout="@layout/include_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login">

        <EditText
            android:id="@+id/verication_ed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:inputType="number"
            android:maxLength="4"
            android:drawableLeft="@drawable/logon_account"
            android:drawablePadding="5dp"
            android:hint="@string/enter_verification_code"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/code_tv"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:background="@color/app_green"
            android:gravity="center"
            android:text="@string/send_verification_code"
            android:textColor="@color/app_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_login">

        <EditText
            android:id="@+id/password_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableLeft="@drawable/logon_account"
            android:drawablePadding="5dp"
            android:maxLength="20"
            android:inputType="textPassword"
            android:digits="@string/edittext_limit"
            android:hint="@string/enter_password"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:drawableLeft="@drawable/shape_red"
        android:drawablePadding="5dp"
        android:paddingTop="15dp"
        android:text="为了您的账号安全,建议设置6-20位数字或字母"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/submit_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/app_green"
        android:gravity="center"
        android:text="@string/next_type"
        android:textColor="@color/app_white"
        android:textSize="16sp" />
</LinearLayout>
