<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9" >

        <RelativeLayout
            android:id="@+id/rlPasswordTopBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FF00c1a0" >

            <Button
                android:id="@+id/btPasswordBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/top_back_btn" />


            <TextView
                android:id="@+id/tvPasswordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:layout_marginTop="10dp"
                android:text="更改密码"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tvUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlPasswordTopBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="密码"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#4d4d4d" />

        <LinearLayout
            android:id="@+id/llModifyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUserPassword"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="#FFFFFF"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etPasswordPre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:ems="10"
                android:digits="@string/edittext_limit"
                android:hint="@string/enter_old_pwd"
                android:paddingLeft="5dp"
                android:password="true" />

            <View
                android:id="@+id/viewPasswordDivider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <EditText
                android:id="@+id/etPasswordNew"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:ems="10"
                android:digits="@string/edittext_limit"
                android:hint="@string/enter_new_pwd"
                android:paddingLeft="5dp"
                android:password="true" />

            <View
                android:id="@+id/viewPasswordDivider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <EditText
                android:id="@+id/etPasswordAffirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/makesure_new_pwd"
                android:digits="@string/edittext_limit"
                android:paddingLeft="5dp"
                android:password="true" />
        </LinearLayout>
    <TextView
        android:id="@+id/show_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llModifyPassword"
        android:textColor="@color/app_font_gray1"
        android:drawableLeft="@drawable/shape_red"
        android:drawablePadding="5dp"
        android:paddingLeft="40dp"
        android:paddingTop="20dp"
        android:textSize="14sp"
        android:text="@string/reg_notice"/>
    <Button
        android:id="@+id/makesure_modification_btn"
        android:layout_below="@id/show_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#FF00c1a0"
        android:minHeight="40dp"
        android:textColor="@color/app_white"
        android:text="@string/makesure_modification"/>

        
</RelativeLayout>
