<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:id="@+id/main"
    android:orientation="vertical" >

    <include layout="@layout/include_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/recharge_50"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rectange_green_stroke"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:text="@string/fifty"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="5dp"
                android:layout_height="fill_parent"
                android:background="@color/app_bg" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/recharge_100"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rectange_green_stroke"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:text="@string/one_hundred"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/recharge_200"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rectange_green_stroke"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:text="@string/two_hundred"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="5dp"
                android:layout_height="fill_parent"
                android:background="@color/app_bg" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/recharge_800"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rectange_green_stroke"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:text="@string/eight_hundred"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/recharge_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectange_green_stroke"
        android:hint="@string/enter_money"
        android:padding="10dp"
        android:textSize="18sp"
        android:inputType="number" />

    <Button
        android:id="@+id/recharge_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/green_btn"
        android:text="@string/makesure_recharge"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>